--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_slidable: ^0.6.0
   screenshot: ^1.2.3
+  pin_code_fields: ^7.3.0
 
 dev_dependencies:
   flutter_test:
