--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   flutter_slidable: ^0.6.0
   screenshot: ^1.2.3
   pin_code_fields: ^7.3.0
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
