--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,7 @@ dependencies:
   flutter_slidable: ^0.6.0
   screenshot: ^1.2.3
   pin_code_fields: ^7.3.0
-
+  flutter_holo_date_picker: ^1.0.1+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
