--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   screenshot: ^1.2.3
   pin_code_fields: ^7.3.0
   flutter_barcode_scanner: ^2.0.0
+  shared_preferences: ^2.0.9
 
 dev_dependencies:
   flutter_test:
