--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,10 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   shared_preferences: ^2.0.9
   flutter_rating_bar: ^4.0.0
+  path_provider: ^2.0.8
+  dio: ^4.0.4
+  open_file: ^3.2.1
+  file_picker: ^4.3.0
 
 dev_dependencies:
   flutter_test:
